[package]
name = "chip8"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
anyhow = "1.0.66"
arbitrary-int = "1.2.2"
rand = "0.8.5"
sdl2 = { git="https://github.com/Rust-SDL2/rust-sdl2.git", branch="master", default-features = false, features = ["unsafe_textures"] }
